@@ -1,3 +1,8 @@
+2012-08-03  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-util.lisp (find-child-under-mouse-in-child-tree):
+	Handle children from all roots instead of from  *root-frame*.
+
 2012-07-23  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-expose-mode.lisp: New expose mode based on standard
